# terrain-aware-locomotion

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_GUIDE.md  README.md  SETUP_AND_RUN.md  pyproject.toml  requirements.txt  setup_project.sh  test_package.py
src/terrain_description/: CMakeLists.txt  package.xml
src/terrain_description/config/: anymal_controllers.yaml
src/terrain_description/urdf/: anymal_simple.urdf.xacro
src/terrain_locomotion/: package.xml  setup.cfg  setup.py
src/terrain_locomotion/config/: elevation_mapper.yaml  footstep_planner.yaml  gait_controller.yaml  terrain_classifier.yaml
src/terrain_locomotion/launch/: demo.launch.py  perception_only.launch.py  simulation.launch.py  terrain_demo.launch.py  terrain_pipeline.launch.py
src/terrain_locomotion/terrain_locomotion/: demo_pipeline.py  simple_walk_demo.py
src/terrain_locomotion/terrain_locomotion/control/: __init__.py  gait_controller.py  inverse_kinematics.py  safety_monitor.py
src/terrain_locomotion/terrain_locomotion/perception/: __init__.py  elevation_mapper.py  terrain_classifier.py
src/terrain_locomotion/terrain_locomotion/perception/models/: __init__.py  terrain_cnn.py
src/terrain_locomotion/terrain_locomotion/planning/: __init__.py  footstep_planner.py  gait_generator.py
src/terrain_locomotion/worlds/: comprehensive_terrain.world  flat_world.world  terrain_world.world
